# 0x0

./: .gitignore  DeepFake_Defense_COMPLETE.ipynb  README.md  next.config.js  package-lock.json  package.json  requirements.txt  run_defense.py  tailwind.config.js
deepfake_defense/: __init__.py  attention.py  batch.py  framework.py  gradio_app.py  perturbation.py  pipeline.py  stargan.py  texture.py  utils.py
modal_backend/: app.py  requirements.txt  test_modal.sh
modal_backend/python_engine/: defense_core.py
python_engine/: build_binary.sh  defense-engine.spec  defense_core.py  download_stargan_weights.py  main.py  requirements.txt  stargan_attack.py
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: attack-tester.tsx  compute-toggle.tsx  image-cropper.tsx  image-dropzone.tsx  progress-tracker.tsx  protection-form.tsx  protection-level-selector.tsx  result-viewer.tsx
src/hooks/: useProtection.ts
src/lib/: modal-client.ts  tauri-bridge.ts
src/types/: index.ts
