[package]
name = "deepfake-defense"
version = "0.1.0"
description = "Vaxel Desktop Platform – vaccinate images against deepfakes"
authors = ["Vaxel Team"]
edition = "2021"

[lib]
name = "deepfake_defense_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "deepfake-defense"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell    = "2"
tauri-plugin-fs       = "2"
tauri-plugin-dialog   = "2"
tauri-plugin-http     = "2"
tauri-plugin-process  = "2"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
tempfile    = "3"
log         = "0.4"
env_logger  = "0.11"
anyhow      = "1"
uuid        = { version = "1", features = ["v4"] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic   = "abort"
codegen-units = 1
lto     = true
opt-level = "s"
strip   = true
